--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
+    "@types/react-router-dom": "^5.3.3",
+    "bootstrap": "^5.3.8",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.13.1",
     "react-scripts": "5.0.1",
+    "simple-git": "^3.32.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
